# lean-explore

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.yml  manifest.json  model_costs.json  openapi.yaml  pyproject.toml  test.py
.github/workflows/: linter.yml
benchmarking/: analyze_rankings.py  benchmark_queries.txt  benchmark_search_rate.py  gather_data.py  gather_search_data.py  inspect_prompts.py  queries_test.txt  reset_results.py  search_engine_ranker.py
dev_tools/: config.py  llm_caller.py
dev_tools/population/: phase1_tasks.py  phase2_tasks.py  phase3_tasks.py  phase4_tasks.py  phase5_tasks.py
extractor/: ExtractAST.lean  ExtractDeclarations.lean  extractor_config.json  lake-manifest.json  lakefile.lean
scripts/: benchmark_queries.txt  benchmark_search.py  build_faiss_index.py  config.py  generate_docs_data.py  generate_embeddings.py  get_summaries.py  lean_to_english.py  lean_to_english_via_openai.py  merge_db.py  pagerank.py  populate_db.py  prepare_embedding_input.py  prompt_template.txt  release_data.py  update_primary_declarations.py
src/lean_explore/: config.py  defaults.py  llm_caller.py  models.py  search.py
src/lean_explore/api/: client.py  server.py
src/lean_explore/cli/: agent.py  config_utils.py  data_commands.py  main.py
src/lean_explore/local/: search.py  service.py
src/lean_explore/mcp/: app.py  server.py  tools.py
src/lean_explore/population/: phase3_tasks.py  phase4_tasks.py
src/lean_explore/shared/models/: api.py  db.py
tests/: conftest.py  test_defaults.py
tests/lean_explore/api/: test_client.py
tests/lean_explore/cli/: test_config_utils.py  test_data_commands.py
tests/lean_explore/local/: test_search.py  test_service.py
tests/lean_explore/mcp/: test_app.py  test_server.py  test_tools.py
