[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-explore"
version = "0.1.0"
authors = [
    { name = "Justin Asher", email = "justinchadwickasher@gmail.com" },
]
description = "A project to explore and rank Lean mathematical declarations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["lean", "lean4", "search", "formal methods", "theorem prover", "math", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    # Core data and search (primarily for local backend)
    "sqlalchemy>=2.0",        # ORM for db models, local.Service, search.py
    "numpy>=1.20",            # For embeddings and FAISS (used by sentence-transformers, faiss)
    "faiss-cpu>=1.7",         # For local FAISS search in search.py
    "sentence-transformers>=2.2.0", # For loading embedding models in search.py
    "rapidfuzz>=3.0.0",       # For name matching in search.py
    "filelock>=3.0.0",        # For performance logging in search.py

    # API Client / Shared Data Models
    "httpx>=0.23.0",          # For asynchronous API client in lean_explore.api.client
    "pydantic>=2.0",          # For data models in lean_explore.shared.models.api

    # CLI & Agent Functionality
    "typer[all]>=0.9.0",      # For CLI application in cli.main (includes rich for console output)
    "toml>=0.10.0",           # For cli.config_utils to manage API key storage
    "openai-agents>=0.0.16",  # For AI agent interaction in cli.agent

    # MCP Server Components
    "mcp>=1.9.0",             # For MCP server implementation in mcp.*

    # Utilities
    "tqdm>=4.60",             # For progress bars (e.g., in future data downloaders not in current src/)
    # "requests>=2.25",       # Keep if specifically needed for sync downloads separate from httpx (not in current src/)
]

[project.scripts]
leanexplore = "lean_explore.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"